# Stock_Trading_App

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  AI_Stock_Trading_Intelligence_Platform_Prompt.md  BUGFIXES.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  agent.md  alembic.ini  prompt_req.txt  skill.md
.claude/: AUDIT_CHECKLIST.md  CLAUDE.md  agent.md  audit.md  settings.json  skill.md
Improvements/: AI Trading Platform - Combined Agent Catalog.md  Event Intelligence Platform.docx  Stock_Research_Engine_req.md  additional_features.txt
docker/: docker-compose.yml
docs/: AI_SIGNAL.md  ARCHITECTURE.md  AUDIT_2026-06-12.md  AUDIT_2026-06-20.html  AUDIT_2026-06-21.html  AUDIT_CHECKLIST.md  AUDIT_FINDINGS_2026-06-09.md  AUDIT_FINDINGS_2026-06-10.md  AUDIT_FINDINGS_TEMPLATE.md  AUDIT_REPORT_2026-07-02.md  AUDIT_REPORT_TIER232_2026-07-02.md  AUDIT_REPORT_TIER234_2026-07-04.md  AUDIT_REPORT_TIER242_2026-07-10.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOY_EC2.md  DESIGN_ALERT_DELIVERY_CHANNELS_2026-07-10.md  DESIGN_BACKTEST_HARNESS_PHASE2_2026-07-06.md  DESIGN_MODEL_PROMOTION_GATES_2026-07-12.md  DESIGN_PROMOTION_GATE_PHASE3_2026-07-05.md  SETUP.md  (+27 more)
shared/: agent.md  pyproject.toml  skill.md
shared/common/: __init__.py  ai_keys.py  config.py  indicators.py  jwt_auth.py  logging.py  redis_client.py  service.py
shared/db/: __init__.py  models.py  session.py
shared/db/migrations/: env.py
shared/db/migrations/versions/: 001_baseline.py  002_signals_dedup_index.py  003_event_intelligence_tables.py  004_rankings_nullable_value_growth.py
(+436 files in other folders)
